--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             max-width: 100%;
             margin: 0 auto;
             text-align: center;
+            position: relative;
         }
         .header-container {
             display: flex;
@@ -87,6 +88,9 @@
             font-size: 14px;
             margin-bottom: 20px;
             color: #1c1e21;
+            position: absolute;
+            top: 20px;
+            left: 20px;
         }
         .back-button svg {
             margin-right: 8px;
@@ -273,6 +277,10 @@
             .main-container {
                 padding: 15px;
             }
+            .back-button {
+                top: 10px;
+                left: 10px;
+            }
         }
     </style>
 </head>
@@ -387,6 +395,12 @@
             <a href="#">Quyên góp</a>
             <a href="#">Giới thiệu</a>
             <a href="#">Trợ giúp</a>
+            <a href="#">Tạo quảng cáo</a>
+            <a href="#">Tạo Trang</a>
+            <a href="#">Nhà phát triển</a>
+            <a href="#">Tuyển dụng</a>
+            <a href="#">Cookie</a>
+            <a href="#">Điều khoản</a>
         </div>
         <div class="footer-meta">Meta © 2025</div>
     </footer>
